# ppsboot

./: .gitignore  pyproject.toml
ppsboot/: __main__.py  dayswidget.py  log.py  main.py
ppsboot/days/: dayslist.py
ppsboot/days/d01/: day1.py
ppsboot/days/d02/: day2.py
ppsboot/days/d03/: day3.py
ppsboot/days/d04/: day4.py
ppsboot/days/d05/: day5.py
ppsboot/days/d06/: day6.py
ppsboot/days/d07/: day7.py
ppsboot/days/d08/: day8.py
ppsboot/days/d09/: day9.py
ppsboot/days/d10/: day10.py
ppsboot/days/d11/: day11.py
ppsboot/days/d12/: day12.py
ppsboot/days/d13/: day13.py
ppsboot/days/d14/: day14.py
ppsboot/days/d15/: day15.py  input_test2.txt
ppsboot/days/d16/: day16.py  input_test2.txt
ppsboot/utils/: exceptions.py  inputfile.py  solution.py  timer.py
